# pointnet-cpp

./: CMakeLists.txt  README.md  test_labels.txt  train_labels.txt
include/: input_transform.h  model.h  train.h
src/: input_transform.cpp  model.cpp  train.cpp
